@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-09-07T01:00:55Z",
-  "count" : 128,
-  "count_minmax" : [ 128, 128 ],
-  "count_decinc" : [ -0, +128 ],
+  "timestamp" : "2024-09-08T01:07:20Z",
+  "count" : 96,
+  "count_minmax" : [ 96, 128 ],
+  "count_decinc" : [ -32, +128 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
