@@ -1,15 +1,10 @@
 {
-  "count": 1721,
+  "count": 1687,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2024-08-24T00:00:00Z",
-      "count": 54,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-08-25T00:00:00Z",
-      "count": 128,
+      "count": 53,
       "uniques": 1
     },
     {
@@ -69,8 +64,13 @@
     },
     {
       "timestamp": "2024-09-06T00:00:00Z",
-      "count": 128,
+      "count": 96,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-07T00:00:00Z",
+      "count": 127,
+      "uniques": 2
     }
   ]
 }
