@@ -1,3 +1,12 @@
+2024-09-08T01:07:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10755829415 # 412
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-08
+* notice: last 14d: unq all: 4 1687
+* notice: prev accum: outdated-unq outdated-all / unq all: 2205 223123 / 2222 224919
+* notice: next accum: outdated-unq outdated-all / unq all: 2206 223252 / 2224 225014
+* notice: prev exec diff / last date diff / accum: unq all: +2 +127 -0 -107 / +2 +127 -0 -0 / 2 127
+* notice: removed / changed dates: [2024-08-24] / [2024-08-25 2024-09-06 2024-09-07]
+
 2024-09-07T01:00:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10747285162 # 411
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-07
